# vacti

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  drizzle.config.ts  eslint.config.js  nx.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.base.json
.husky/: pre-commit  pre-push
apps/mandraguna-cli/: .gitignore  Cargo.toml  deny.toml  project.json
apps/mandraguna-cli/src/: cli.rs  lib.rs  main.rs
apps/mandraguna-cli/src/application/: mod.rs
apps/mandraguna-cli/src/commands/: mod.rs
apps/mandraguna-cli/src/domain/: mod.rs
apps/mandraguna-cli/src/infrastructure/: mod.rs
docs/: README.md
drizzle/: 0000_init.sql  0001_recon.sql  0002_threat_intel.sql  0003_finding_status.sql  0004_reports.sql  0005_integrations.sql  0006_ai_enrichment.sql  0007_report_teal_navy_defaults.sql  0008_report_logo_signature_execsummary.sql  0009_vuln_cvss_cve_references.sql  0010_user_global_role.sql  0011_scan_cancel_requested.sql  0012_scan_schedules.sql  0013_scan_tools_override.sql  0014_recon_notes_interesting_endpoints.sql  0015_ti_ai_narrative.sql  0016_scan_profile_config.sql  0017_sector_threat_news.sql  0018_news_status.sql  0019_leak_password.sql  0020_leak_origin.sql  0021_naive_lionheart.sql  0022_nifty_marrow.sql  0023_aspiring_slapstick.sql  0024_magical_moonstone.sql  0025_natural_shockwave.sql  0026_ai_base_url.sql  0027_project_default.sql  (+34 more)
(+574 files in other folders)
