[package]
name = "mandraguna-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CLI tools for the Vacti vulnerability assessment platform"
license = "MIT"
publish = false

[[bin]]
name = "mandraguna-cli"
path = "src/main.rs"

[lib]
name = "mandraguna_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
anyhow = "1.0.102"
serde_json = "1.0.150"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.rustdoc]
private_intra_doc_links = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
must_use_candidate = "allow"
unnecessary_wraps = "allow"
case_sensitive_file_extension_comparisons = "allow"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
doc_markdown = "deny"
missing_docs_in_private_items = "deny"
unwrap_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"
indexing_slicing = "allow"
arithmetic_side_effects = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
